[project]
name = "leben-in-deutschland"
version = "0.1.0"
description = ""
authors = [
    {name = "youpele"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "xlsxwriter (>=3.2.2,<4.0.0)",
    "fake-useragent (>=2.0.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
